--- a/rusty_zelda/Cargo.toml
+++ b/rusty_zelda/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2024"
 [target.'cfg(unix)'.dependencies]
 sdl2 = "0.37"
 
-[dependencies.sdl2]
+[target.'cfg(windows)'.dependencies.sdl2]
 version = "0.37"
 default-features = false
 features = ["ttf","image","gfx","mixer","static-link","use-vcpkg"]
 
-[package.metadata.vcpkg]
+[target.'cfg(windows)'.package.metadata.vcpkg]
 dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
 git = "https://github.com/microsoft/vcpkg"
 rev = "2024.05.24" # release 2024.05.24 # to check for a new one, check https://github.com/microsoft/vcpkg/releases
 
-[package.metadata.vcpkg.target]
+[target.'cfg(windows)'.package.metadata.vcpkg.target]
 x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
